# nebula

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  README.md  THIRD-PARTY-NOTICES
.github/workflows/: build-windows.yml
docs/: PACKAGING.md
docs/screenshots/: SHOTLIST.md
extra/completions/: _nebula  nebula.bash  nebula.fish
nebula-completions/: Cargo.toml
nebula-completions/src/: color.rs  completer.rs  directory.rs  file.rs  lib.rs  matcher.rs  options.rs  span.rs  static_completion.rs  suggestion.rs
nebula_app/: Cargo.toml  build.rs
nebula_app/res/: image.f.glsl  image.v.glsl  ui.f.glsl  ui.v.glsl
nebula_app/src/: ai_hook.rs  cli.rs  clipboard.rs  event.rs  file_uri.rs  logging.rs  main.rs  message_bar.rs  mux.rs  nebula_history.rs  notify.rs  panic.rs  process_tree.rs  scheduler.rs  session.rs  ssh.rs  ssh_credentials.rs  ssh_session.rs  window_context.rs
nebula_app/src/config/: bell.rs  bindings.rs  color.rs  cursor.rs  debug.rs  font.rs  general.rs  mod.rs  monitor.rs  mouse.rs  scrolling.rs  selection.rs  terminal.rs  ui_config.rs  window.rs
nebula_app/src/config/bindings/: defaults.rs
nebula_app/src/display/: chrome.rs  color.rs  command_palette.rs  content.rs  cursor.rs  damage.rs  hint.rs  meter.rs  mod.rs  settings.rs  side_panel.rs  theme.rs  window.rs
nebula_app/src/input/: keyboard.rs  mod.rs
nebula_app/src/polling/: ipc.rs  mod.rs
nebula_app/src/renderer/: image.rs  mod.rs  rects.rs  ui.rs
nebula_app/src/renderer/text/: builtin_font.rs  gles2.rs  glsl3.rs  glyph_cache.rs  mod.rs
nebula_app/src/renderer/text/builtin_font/: glyphs.rs
nebula_app/src/window_context/: nebula_fetch_art.rs  split.rs  welcome.rs
nebula_app/windows/: nebula.rc
nebula_config/: Cargo.toml
nebula_config/src/: lib.rs
nebula_config_derive/: Cargo.toml
nebula_config_derive/src/: lib.rs  serde_replace.rs
nebula_config_derive/src/config_deserialize/: de_enum.rs  de_struct.rs
nebula_config_derive/tests/: config.rs
nebula_hook/: Cargo.toml
nebula_hook/src/: main.rs
nebula_terminal/: Cargo.toml
nebula_terminal/src/: event.rs  event_loop.rs  lib.rs  osc_cwd.rs
nebula_terminal/src/grid/: mod.rs  resize.rs  tests.rs
nebula_terminal/src/term/: cell.rs  mod.rs  search.rs
nebula_terminal/src/tty/: mod.rs  unix.rs
nebula_terminal/src/tty/windows/: blocking.rs  conpty.rs  mod.rs
nebula_terminal/tests/: ref.rs
nebula_terminal/tests/ref/hyperlinks/: grid.json
tools/: gen_fetch_art.py
